service-mesh/bookinfo/09_trafficcontrol/slow_connection/reviews-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
  labels:
    example: bookinfo
spec:
  hosts:
  - reviews
  http:
  - match:
      - headers:
          end-user:
            exact: jason
    route:
    - destination:
        host: reviews
        subset: v3
  - route:
    - destination:
        host: reviews
        subset: v2
